--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc://mysql://127.0.0.1:3306/book_manager?characterEncoding=utf8
+    url: jdbc:mysql://127.0.0.1:3306/book_manager?characterEncoding=utf8
     username: root
     password: mysql
     driverClassName: com.mysql.cj.jdbc.Driver
