[add] Spring AOPでログ出力

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
   jackson:
     property-naming-strategy: SNAKE_CASE
+# ロギングに関する設定
+logging:
+  level:
+    root: INFO
